# fge

./: .gitignore  Cargo.toml  README.md  clippy.toml  flake.nix  sweep.timestamp
.cargo/: config.toml
.circleci/: config.yml
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 5av295sla39wns53789cmyi35y8yqsri-source  ac3hr11jc874sax8l9nr5qqdhs0yjvcj-source
.github/workflows/: rust.yml
crates/fge_core/: Cargo.toml
crates/fge_core/src/: action_context.rs  animation_player.rs  args.rs  character.rs  components.rs  main.rs  plugins.rs  prelude.rs  sequence.rs  system_sets.rs
crates/fge_core/src/components/: animations.rs  character_list.rs  character_state.rs  collision_box.rs  floor.rs  health.rs  position.rs  spritesheets.rs
crates/fge_core/src/plugins/: animation_player.rs  character.rs  debug.rs  input.rs  physics.rs
crates/fge_core/src/plugins/animation_player/: components.rs  systems.rs
crates/fge_core/src/plugins/character/: commands.rs  systems.rs
crates/fge_core/src/plugins/input/: components.rs
crates/fge_core/src/plugins/physics/: systems.rs
crates/fge_input/: Cargo.toml
crates/fge_input/src/: input.rs  inputs.rs  lib.rs
crates/fge_models/: Cargo.toml  build.rs
crates/fge_models/fixtures/: basic.lua
crates/fge_models/src/: format.rs  lib.rs  serde.rs  step_set.rs
data/: akiha.lua  akiha_idle.json  character.lua  game.lua
