[workspace]
resolver = "3"
members = ["crates/fge_models", "crates/fge_core", "crates/fge_input"]

[workspace.dependencies]
bevy = { version = "0.18.0", features = ["2d", "dynamic_linking"] }
bevy_reflect = "0.18.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_with = { version = "3.16.1" }
itertools = { version = "0.14.0" }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[workspace.lints.clippy]
float-cmp = "deny"
float-cmp-const = "deny"
float-equality-without-abs = "deny"
imprecise-flops = "deny"
float-arithmetic = "deny"
lossy-float-literal = "deny"
suboptimal-flops = "deny"
while-float = "deny"
unreadable-literal = "deny"
cast-precision-loss = "deny"
str-split-at-newline = "deny"