[package]
name = "fge_core"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.17.2", features = ["dynamic_linking"] }
bevy-inspector-egui = "0.35.0"
bevy_rapier2d = { git = "https://github.com/Deniskore/bevy_rapier.git", branch = "bevy-0.17" }
bevy_spritesheet_animation = "5.0.0"
fge_models = { path = "../fge_models" }

[dev-dependencies]
rstest = "0.26.1"

[lints.clippy]
float_arithmetic = "deny"
float_cmp = "deny"
float_cmp_const = "deny"
lossy_float_literal = "deny"
while_float = "deny"
uninlined_format_args = "deny"
