[package]
name = "fge_core"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { workspace = true }
itertools = { workspace = true }
bevy-inspector-egui = "0.36.0"
bevy_rapier2d = { git = "https://github.com/Buncys/bevy_rapier.git", branch = "bevy-0.18.0" }
fge_models = { path = "../fge_models" }
fge_input = { path = "../fge_input" }
ringbuffer = "0.16.0"
argh = "0.1.13"

[dev-dependencies]
rstest = "0.26.1"

[lints.clippy]
float_arithmetic = "deny"
float_cmp = "deny"
float_cmp_const = "deny"
lossy_float_literal = "deny"
while_float = "deny"
uninlined_format_args = "deny"
